个人喜好调整配置

--- a/module/clash/clash.config
+++ b/module/clash/clash.config
@@ -21,7 +21,7 @@ auto_updateGeoSite="true"
 auto_updateclashMeta="true"
 # 是否开启自动更新clashMeta内核
 
-restart_update="false"
+restart_update="yes"
 # 更新内核后是否重启clashMeta
 
 alpha="false"
@@ -51,7 +51,7 @@ ghproxy="https://mirror.ghproxy.com"
 safe_ui="true"
 #仅允许本机访问api
 
-mode="global"
+mode="blacklist"
 # cfm运行模式：
 # blacklist(指定应用不走代理)
 # whitelist(仅指定应用走代理)
