--- a/module/clash/clash.yaml
+++ b/module/clash/clash.yaml
@@ -10,7 +10,7 @@ geodata-mode: true
 unified-delay: true
 mode: rule
 log-level: info
-ipv6: true
+ipv6: false
 tcp-concurrent: true
 geo-auto-update: true
 geo-update-interval: 24
@@ -46,14 +46,37 @@ tun:
 dns:
   enable: true
   listen: 0.0.0.0:53
+  default-nameserver:
+  # MoeDNS
+   - 221.131.165.165
+   - 36.156.184.156
+  # 119
+   - 119.29.29.29
+  # Baidu
+   - 180.76.76.76
+  # 阿里云
+   - 223.5.5.5
   nameserver-policy:
     "geosite:cn,geoip:cn,private":
       - https://doh.pub/dns-query
       - https://dns.alidns.com/dns-query
   nameserver:
+  # 18Bit
+    - https://doh.18bit.cn/dns-query
+  # MoeDNS
+    - https://pdns.itxe.net/dns-query
+  # iQDNS
+    - https://cn-east.iqiqzz.com/dns-query
+#   - https://dns.alidns.com/dns-query
+#   - https://cn-south.iqiqzz.com/dns-query
+  # 阿里云
+    - https://223.5.5.5/dns-query
+  # DNSPod
+    - https://doh.pub/dns-query
+  fallback:
     - tls://8.8.4.4
     - https://1.0.0.1/dns-query
-
+    - https://doh.18bit.cn/dns-query
 
 # 看不懂为什么不去看文档？
 # 看不懂为什么不去看文档？
